--- a/Web.config
+++ b/Web.config
@@ -8,6 +8,9 @@
 <configuration>
   <appSettings>
     <add key="correo" value="notifications@consultoriocc.com"/>
+
+    <add key="FacebookJN4" value="https://www.facebook.com/cjardinesdelnorte/"/>
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -21,8 +24,5 @@
       </smtp>
     </mailSettings>
   </system.net>
-
-
-
 
 </configuration>
